force-app/main/default/objects/Unit_Set_Attempt__c.object
<CustomObject>
    <description>Majors, minors and specialisations. When seen against a Course Attempt, consider them inflight. Against a Contact Qualification, they are part of the award.</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>This field captures category</description>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>This field captures unit set code</description>
        <label>Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Attempt_Campus__c</fullName>
        <description>Used by Advancement Team for Alumni Reporting</description>
        <formula>TEXT(Course_Attempt__r.Campus__c)</formula>
        <label>Course Attempt Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Attempt__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Course Attempt</label>
        <referenceTo>Course_Attempt__c</referenceTo>
        <relationshipLabel>Unit Set Attempt</relationshipLabel>
        <relationshipName>Unit_Set_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>The course this unit set is attached to. System field, used to name the record.</description>
        <label>Course Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <label>Person ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>This field captures rank</description>
        <label>Rank</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirements_Complete_Date__c</fullName>
        <label>Requirements Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selection_Date__c</fullName>
        <label>Selection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>This field captures title</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_External_Id__c</fullName>
        <description>This field captures category</description>
        <externalId>true</externalId>
        <label>Unique External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>Lookup to course object</description>
        <label>Unit Set</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Course__c.Type__c</field>
                <operation>equals</operation>
                <value>Unit Set</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Unit Set Attempts</relationshipLabel>
        <relationshipName>Unit_Set_Attempts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>This field captures unit set version</description>
        <label>Version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>deleted_on_source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag indicates if the qualification is currently active</description>
        <label>Deleted on Source</label>
        <type>Checkbox</type>
    </fields>
    <label>Unit Set Attempt</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Code__c</columns>
        <columns>Category__c</columns>
        <columns>Rank__c</columns>
        <columns>Requirements_Complete_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unit Set Attempts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>